kor_spring_blog_ssr_v1/src/main/java/org/example/demo_ssr_v1_1/_core/errors/exception/Exception403.java
package org.example.demo_ssr_v1_1._core.errors.exception;

/**
 * 403 Forbidden 인증 처리 오류
 */
public class Exception403 extends RuntimeException {
    public Exception403(String msg) {
        super(msg);
    }
}
